--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 <body>
     <header>
         <nav class="navbar">
-            <a class="home-link" href="#"><img src="images/RD_logo.png" alt="RandomDessert logo"></a>
+            <a class="home-link" href="index.html"><img src="images/RD_logo.png" alt="RandomDessert logo"></a>
 
             <div class="dropdown">
                 <button class="dropbtn" onclick="dropdown1()">Категория
                     <img src="images/arrow-down-rounded.svg" alt="arrows">
-                    <i class="fa fa-caret-down"></i>
                 </button>
                 <div id="myDropdown1" class="dropdown-content">
                     <div class="categories-block">
@@ -30,7 +29,6 @@
             <div class="dropdown">
                 <button class="dropbtn" onclick="dropdown2()">Кухня
                     <img src="images/arrow-down-rounded.svg" alt="arrows">
-                    <i class="fa fa-caret-down"></i>
                 </button>
                 <div id="myDropdown2" class="dropdown-content">
                     <div class="cuisines-block">
@@ -44,7 +42,6 @@
             <div class="dropdown">
                 <button class="dropbtn" onclick="dropdown3()">Ингредиент
                     <img src="images/arrow-down-rounded.svg" alt="arrows">
-                    <i class="fa fa-caret-down"></i>
                 </button>
                 <div id="myDropdown3" class="dropdown-content">
                     <div class="ingredients-block">
