--- a/gpt.html
+++ b/gpt.html
@@ -12,11 +12,11 @@
 <body>
     <section>
         <a href="index.html">
-            <h1>Random<br>Dessert</h1>
+            <img class="logo" src="images/RD_logo2.png" alt="RandomDessert logo">
         </a>
         <h2>Chat<span>GPT</span></h2>
         <p>Выберите 3 ингредиента для формирования рецепта</p>
-        <p class="error"></p>
+        <!-- <p class="error"></p> -->
         <form action="">
             <div class="ingredients-block">
                 <ul class="ingredients-list"></ul>
