--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
                     </div>
                 </div>
             </div>
-            <a class="chat-gpt-link" href="gpt.html">ChatGPT</a>
-            <!-- <div class="star">
+            <a class="chat-gpt-link" href="gpt.html">ChatGPT <img src="images/top-right-arrow.svg" alt=""
+                    width="24px"></a>
+
+            <div class="star">
                 <h2>Доверь свой<br>выбор<br>НЕЙРОСЕТИ</h2>
-            </div> -->
+            </div>
             <!-- <a class="star">Доверь свой<br>выбор<br>НЕЙРОСЕТИ<img src="images/Star 1.svg" alt="star"></a> -->
         </nav>
     </header>
