--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RandomDessert</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/text-flicker-in-glow.css">
 </head>
 
 <body>
@@ -51,20 +52,20 @@
                     </div>
                 </div>
             </div>
-            <a class="chat-gpt-link" href="gpt.html">ChatGPT <img src="images/top-right-arrow.svg" alt=""
+            <a class="chat-gpt-link" href="gpt.html">ChatGPT<img src="images/top-right-arrow.svg" alt=""
                     width="24px"></a>
 
-            <div class="star">
-                <h2>Доверь свой<br>выбор<br>НЕЙРОСЕТИ</h2>
+            <div class="circle">
+                <h2 class="circle__title">Доверь свой<br> выбор<br> НЕЙРОСЕТИ</h2>
+                <img class="circle__image" src="images/Star 1.svg" alt="" width="232px">
             </div>
-            <!-- <a class="star">Доверь свой<br>выбор<br>НЕЙРОСЕТИ<img src="images/Star 1.svg" alt="star"></a> -->
         </nav>
     </header>
     <main>
         <section class="main">
             <div class="main-title">
-                <img class="cross" src="images/star.svg" alt="star" width="75">
-                <h1 class="title">Random dessert</h1>
+                <img class="cross" src="images/star.svg" alt="cross" width="75px">
+                <h1 class="title">Random des<span class="text-flicker-in-glow">s</span>ert</h1>
             </div>
             <form class="search" id="search-form" action="/">
                 <input type="text" placeholder="Рецепт, ингредиент" name="search">
